initial throw at building test framework veryfies already the graph loading is working

--- a/debug-logconf.yml
+++ b/debug-logconf.yml
@@ -8,20 +8,23 @@ formatters:
 handlers:
   stderr:
     class: logging.StreamHandler
-    level: INFO
+    level: DEBUG
     formatter: base
     stream: ext://sys.stderr
   file:
     class: logging.FileHandler
     level: DEBUG
     formatter: base
-    filename: cctst.log
+    filename: pykg2tbl.log
     mode: 'w'  # in stead of 'a'
 loggers:
   __main__:
     level: DEBUG
     propagate: yes
-  cctst:
+  pykg2tbl:
+    level: DEBUG
+    propagate: yes
+  tests:
     level: DEBUG
     propagate: yes
 root:
