no need for this double entry

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,8 @@ build/
 _build/
 *.log
 
-# vemnv / Byte-compiled / optimized / DLL files
+# venv / Byte-compiled / optimized / DLL files
 venv/
-__pycache__/
 __pycache__/
 *.py[cod]
 *$py.class
