--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 rdflib = "^6.3.2"
 sparqlwrapper = "^2.0.0"
 argparse = "^1.4.0"
@@ -35,6 +35,10 @@ poetry = {version = "^1.4.2", extras = ["dev"]}
 pyyaml = {version = "^6.0", extras = ["dev"]}
 python-dotenv = {version = "^1.0.0", extras = ["dev"]}
 rdflib = {version = "^6.3.2", extras = ["dev"]}
+pre-commit = {version = "^3.3.1", extras = ["dev"]}
+isort = {version = "^5.12.0", extras = ["dev"]}
+black = {version = "^23.3.0", extras = ["dev"]}
+flake8 = {version = "^6.0.0", extras = ["dev"]}
 
 [tool.poetry.extras]
 dev = []
