--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,18 +4,25 @@
 name: Python application
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    types: [opened, ready_for_review, synchronize]
+    types: [opened, synchronize]
 
 jobs:
-  build:
+  PR-Checker:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          package:
+            - 'pykg2tbl/**'
+          tests:
+            - 'tests/**'
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
@@ -23,9 +30,28 @@ jobs:
     - name: Install dependencies
       run: |
         make init-dev
-    - name: Lint with flake8
+        pip install coverage pytest-cov
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+
+    - name: Linting check
+      id: linting_check
+      if: ${{steps.filter.outputs.package == 'true' }} or ${{steps.filter.outputs.tests == 'true' }} 
       run: |
         make check
-    - name: Test with
+
+    - name: Test with pytest
+      id: pytest_test
+      if: ${{steps.linting_check.outputs.package == 'true' }}
       run: |
         make test
+
+    - id: run-tests
+      if: ${{steps.pytest_test.outputs == 'true'}}
+      uses: dima-engineer/pytest-reporter@v2.1.1
+      with:
+        cov-omit-list: tests/*, custom_cmds.py, *__init__*, *__version__*, *__main__*
+        cov-threshold-single: 85
+        cov-threshold-total: 90
+        async-tests: true
+        poetry-version: 1.4.2
