--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ argparse = "^1.4.0"
 validators = "^0.20.0"
 jinja2 = "^3.1.2"
 logging = "^0.4.9.6"
-setuptools-cpp = "^0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = {version = "^7.3.1", extras = ["dev"]}
@@ -39,6 +38,7 @@ pre-commit = {version = "^3.3.1", extras = ["dev"]}
 isort = {version = "^5.12.0", extras = ["dev"]}
 black = {version = "^23.3.0", extras = ["dev"]}
 flake8 = {version = "^6.0.0", extras = ["dev"]}
+coverage = {version = "^7.2.5", extras = ["dev"]}
 
 [tool.poetry.extras]
 dev = []
