--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ sparqlwrapper = "^2.0.0"
 argparse = "^1.4.0"
 validators = "^0.20.0"
 jinja2 = "^3.1.2"
+pandas = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = {version = "^7.3.1", extras = ["dev"]}
