--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,3 +56,7 @@ line-length = 79
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests",]
+pythonpath = ["."]
