--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,8 @@ python-dotenv = {version = "^1.0.0", optional = true}
 # Documentation tools
 sphinx = {version = "^7.0.1", optional = true}
 
-
+# Poetry has the dependecies groups, but those are not 
+#   compatible with extras, widely used in the python-verse.
 [tool.poetry.extras]
 dev = ["pre-commit", "isort", "black", "flake8"]
 tests = ["pyyaml","pytest", "coverage", "python-dotenv"]
