--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pyyaml = {version = "^6.0", optional = true}
 pytest = {version = "^7.3.1", optional = true}
 coverage = {version = "^7.2.5", optional = true}
 python-dotenv = {version = "^1.0.0", optional = true}
+pytest-cov = {version = "^4.1.0", optional = true}
 
 # Documentation tools
 sphinx = {version = "^7.0.1", optional = true}
@@ -48,7 +49,7 @@ sphinx = {version = "^7.0.1", optional = true}
 #   compatible with extras, widely used in the python-verse.
 [tool.poetry.extras]
 dev = ["pre-commit", "isort", "black", "flake8"]
-tests = ["pyyaml","pytest", "coverage", "python-dotenv"]
+tests = ["pyyaml","pytest", "coverage", "python-dotenv", "pytest-cov"]
 docs = ["sphinx"]
 
 [tool.poetry.scripts]
