--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build Pages
         if: ${{steps.filter.outputs.package == 'true' }}
         run: |
-            make init-dev
+            make init-docs
             make docs
 
       - name: Coverage Badge
