--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ line-length = 79
 
 [tool.isort]
 multi_line_output = 3
+include_trailing_comma = true
+combine_as_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests",]
