--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ rdflib = "^6.3.2"
 sparqlwrapper = "^2.0.0"
 argparse = "^1.4.0"
 validators = "^0.20.0"
-jinja2 = "^3.1.2"
 pandas = "^2.0.1"
 poetry = "^1.5.0"
+pyrdfj2 = "^0.0.2"
 
 
 # Development tools
@@ -47,6 +47,7 @@ sphinx = {version = "^7.0.1", optional = true}
 
 # Poetry has the dependecies groups, but those are not 
 #   compatible with extras, widely used in the python-verse.
+
 [tool.poetry.extras]
 dev = ["pre-commit", "isort", "black", "flake8"]
 tests = ["pyyaml","pytest", "coverage", "python-dotenv", "pytest-cov"]
