--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,38 +20,38 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-rdflib = "^6.3.2"
-sparqlwrapper = "^2.0.0"
-argparse = "^1.4.0"
-validators = "^0.20.0"
-pandas = "^2.0.1"
-poetry = "^1.5.0"
-pyrdfj2 = "^0.0.2"
+rdflib = "*"
+sparqlwrapper = "*"
+argparse = "*"
+validators = "*"
+pandas = "*"
+pyrdfj2 = "*"
 
+[tool.poetry.group.docs]
+optional = true
 
-# Development tools
-pre-commit = {version = "^3.3.1", optional = true}
-isort = {version = "^5.12.0", optional = true}
-black = {version = "^23.3.0", optional = true}
-flake8 = {version = "^6.0.0", optional = true}
+[tool.poetry.group.docs.dependencies]
+sphinx = "*"
 
-# Testing tools
-pyyaml = {version = "^6.0", optional = true}
-pytest = {version = "^7.3.1", optional = true}
-coverage = {version = "^7.2.5", optional = true}
-python-dotenv = {version = "^1.0.0", optional = true}
-pytest-cov = {version = "^4.1.0", optional = true}
+[tool.poetry.group.dev]
+optional = true
 
-# Documentation tools
-sphinx = {version = "^7.0.1", optional = true}
+[tool.poetry.group.dev.dependencies]
+poetry = "*"
+pre-commit = "*"
+isort = "*"
+black = "*"
+flake8 = "*"
 
-# Poetry has the dependecies groups, but those are not 
-#   compatible with extras, widely used in the python-verse.
+[tool.poetry.group.tests]
+optional = true
 
-[tool.poetry.extras]
-dev = ["pre-commit", "isort", "black", "flake8"]
-tests = ["pyyaml","pytest", "coverage", "python-dotenv", "pytest-cov"]
-docs = ["sphinx"]
+[tool.poetry.group.tests.dependencies]
+pyyaml = "*"
+pytest = "*"
+coverage = "*"
+python-dotenv = "*"
+pytest-cov = "*"
 
 [tool.poetry.scripts]
 pykg2tbl = "pykg2tbl.__main__:main"
